156. Ruta para manejar autenticación de Google

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Acceso denegado</title>
+    <meta
+      name="google-signin-client_id"
+      content="840349428293-ih1l8sjsftecl2do6fbg69du1rlgma2i.apps.googleusercontent.com"
+    />
+    <title>Google SignIn</title>
   </head>
   <body>
-    <h1>Acceso Denegado</h1>
+    <h1>Google SignIn</h1>
+    <hr />
+    <div id="my-signin2" data-callback=""></div>
   </body>
+  <div
+    id="g_id_onload"
+    data-client_id="840349428293-ih1l8sjsftecl2do6fbg69du1rlgma2i.apps.googleusercontent.com"
+    data-login_uri="https://your.domain/your_login_endpoint"
+    data-auto_prompt="false"
+    data-callback="handleCredentialResponse"
+  ></div>
+  <div
+    class="g_id_signin"
+    data-type="standard"
+    data-size="large"
+    data-theme="outline"
+    data-text="sign_in_with"
+    data-shape="rectangular"
+    data-logo_alignment="left"
+  ></div>
+
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
+  <script>
+    function handleCredentialResponse(response) {
+      console.log('id_token', response.credential);
+    }
+  </script>
 </html>
