--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,16 @@
   <script src="https://accounts.google.com/gsi/client" async defer></script>
   <script>
     function handleCredentialResponse(response) {
+      fetch('http://localhost:8080/api/auth/google/', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+        },
+        body: JSON.stringify({ id_token: response.credential }),
+      })
+        .then((res) => res.json())
+        .then((data) => console.log(data))
+        .catch((err) => console.error(err));
       console.log('id_token', response.credential);
     }
   </script>
